# imap-server

./: .gitignore  CMakeLists.txt  config.txt  server.crt  server.key
DataBase/MailDB/: CMakeLists.txt
DataBase/MailDB/include/MailDB/: IMailDB.h  PgMailDB.h
DataBase/MailDB/src/: PgMailDB.cpp
include/Logger/: CMakeLists.txt  serverlog.txt
include/Parser/: CMakeLists.txt
include/Parser/include/: ServerConfig.h
include/Parser/src/: ServerConfig.cpp
include/Server/: CMakeLists.txt
include/Server/include/: Server.h
include/Server/include/ClientSession/: CMakeLists.txt
include/Server/include/ClientSession/include/: ClientSession.h  ImapRequest.h
include/Server/include/ClientSession/src/: ClientSession.cpp  ImapRequest.cpp
include/Server/src/: Server.cpp
include/SocketWrapper/: CMakeLists.txt
include/SocketWrapper/include/: ISocketWrapper.h  SocketWrapper.h  SslSocketWrapper.h  TcpSocketWrapper.h
include/SocketWrapper/src/: SocketWrapper.cpp  SslSocketWrapper.cpp  TcpSocketWrapper.cpp
src/: main.cpp
